frontend_tests/negative/duplicate_main/go.mod
module example.com/renvotests/negative/duplicate_main

go 1.25
